[gd_scene load_steps=47 format=3 uid="uid://cwsbvhhhmfgka"]

[ext_resource type="Script" path="res://scripts/entities/player/player.gd" id="1_jt8wm"]
[ext_resource type="Shader" uid="uid://dm1mrd5ixywnx" path="res://assets/shaders/shared/hit_flash.tres" id="2_buj7m"]
[ext_resource type="Texture2D" uid="uid://c3rdyodlrpwho" path="res://art/1. mystic_woods/sprites/characters/player.png" id="2_fwo3g"]
[ext_resource type="Script" path="res://scripts/entities/player/resources/player_stats.gd" id="2_pkfog"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_movement_component.gd" id="3_riwmd"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_anim_component.gd" id="4_3guep"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_attack_component.gd" id="5_c73gb"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_hurtbox_component.gd" id="5_goxnr"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_idle.gd" id="5_mj20d"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_walk.gd" id="6_r46d2"]
[ext_resource type="Script" path="res://scripts/entities/player/components/player_sprint_component.gd" id="7_4wyip"]
[ext_resource type="Script" path="res://scripts/fsm/finite_state_machine.gd" id="7_gymax"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/timers_component.gd" id="9_lr3xf"]
[ext_resource type="Script" path="res://scripts/entities/player/states/player_sprint_state.gd" id="11_2ei5o"]
[ext_resource type="Script" path="res://scripts/entities/player/states/player_basic_attack_state.gd" id="14_wm882"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_hurt.gd" id="16_7jrph"]
[ext_resource type="Script" path="res://scripts/entities/shared/components/entity_hitbox_component.gd" id="16_g3a36"]
[ext_resource type="Script" path="res://scripts/entities/shared/states/entity_death.gd" id="18_epcdh"]
[ext_resource type="PackedScene" uid="uid://dtysoabuc2buy" path="res://scenes/ui/healthbar.tscn" id="19_ano08"]
[ext_resource type="Script" path="res://scripts/misc/hitflash/HitFlashAnimationPlayer.gd" id="20_ui2af"]
[ext_resource type="PackedScene" uid="uid://chghtbvx3384l" path="res://scenes/ui/inventory/inventory_gui.tscn" id="21_770ko"]

[sub_resource type="Resource" id="Resource_16vn6"]
resource_local_to_scene = true
script = ExtResource("2_pkfog")
health = 100.0
min_speed = 60.0
max_speed = 100.0
acceleration = 75.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vy4w6"]
resource_local_to_scene = true
shader = ExtResource("2_buj7m")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15xof"]
size = Vector2(9, 5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08tca"]
radius = 7.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hbth"]
size = Vector2(30, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yt6vr"]
size = Vector2(33, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uo1w0"]
size = Vector2(34, 24)

[sub_resource type="Animation" id="Animation_knkmv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kny1l"]
resource_name = "back_attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_bjwi0"]
resource_name = "back_hurt"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 15, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_gjbgg"]
resource_name = "back_idle"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_u2i7n"]
resource_name = "back_walk"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_qid10"]
resource_name = "death"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="Animation_5vwmx"]
resource_name = "front_attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_1k477"]
resource_name = "front_hurt"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_b7kl4"]
resource_name = "front_idle"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_c15p2"]
resource_name = "front_walk"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_cmsvd"]
resource_name = "side_attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_irs05"]
resource_name = "side_hurt"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 9, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_juklu"]
resource_name = "side_idle"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_w67pa"]
resource_name = "side_walk"
length = 0.9
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_038jc"]
_data = {
"RESET": SubResource("Animation_knkmv"),
"back_attack": SubResource("Animation_kny1l"),
"back_hurt": SubResource("Animation_bjwi0"),
"back_idle": SubResource("Animation_gjbgg"),
"back_walk": SubResource("Animation_u2i7n"),
"death": SubResource("Animation_qid10"),
"front_attack": SubResource("Animation_5vwmx"),
"front_hurt": SubResource("Animation_1k477"),
"front_idle": SubResource("Animation_b7kl4"),
"front_walk": SubResource("Animation_c15p2"),
"side_attack": SubResource("Animation_cmsvd"),
"side_hurt": SubResource("Animation_irs05"),
"side_idle": SubResource("Animation_juklu"),
"side_walk": SubResource("Animation_w67pa")
}

[sub_resource type="Animation" id="Animation_38cqm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xglmi"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_107rn"]
_data = {
"RESET": SubResource("Animation_38cqm"),
"hit_flash": SubResource("Animation_xglmi")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprint_comp", "attack_comp", "hurtbox", "inventory", "sprint_state", "hurt_state", "attack_states", "fsm", "sprite", "healthbar", "anim_player", "hitflash_anim_player", "move_comp", "anim_comp", "timer_comp", "idle_state", "walk_state", "death_state") groups=["Player"]]
collision_mask = 62
script = ExtResource("1_jt8wm")
stats = SubResource("Resource_16vn6")
sprint_comp = NodePath("PlayerSprintComponent")
attack_comp = NodePath("EntityAttackComponent")
hurtbox = NodePath("EntityHurtbox")
inventory = NodePath("CanvasLayer/InventoryGUI")
sprint_state = NodePath("FSM/PlayerSprintState")
hurt_state = NodePath("FSM/EntityHurtState")
attack_states = [NodePath("FSM/PlayerBasicAttackState")]
fsm = NodePath("FSM")
sprite = NodePath("Sprite2D")
healthbar = NodePath("Healthbar")
anim_player = NodePath("AnimationPlayer")
hitflash_anim_player = NodePath("HitFlashAnimPlayer")
move_comp = NodePath("EntityMovementComponent")
anim_comp = NodePath("EntityAnimationComponent")
timer_comp = NodePath("TimersComponent")
idle_state = NodePath("FSM/EntityIdleState")
walk_state = NodePath("FSM/EntityWalkState")
death_state = NodePath("FSM/EntityDeathState")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vy4w6")
position = Vector2(-1, -17)
texture = ExtResource("2_fwo3g")
hframes = 6
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_15xof")

[node name="Healthbar" parent="." instance=ExtResource("19_ano08")]
visible = false
offset_left = -9.0
offset_top = 3.0
offset_right = 10.0
offset_bottom = 5.0

[node name="TimersComponent" type="Node" parent="."]
script = ExtResource("9_lr3xf")

[node name="EntityHurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 14
script = ExtResource("5_goxnr")
invincible_for = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityHurtbox"]
visible = false
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_08tca")

[node name="EntityAnimationComponent" type="Node" parent="."]
script = ExtResource("4_3guep")

[node name="EntityAttackComponent" type="Node" parent="."]
script = ExtResource("5_c73gb")

[node name="EntityMovementComponent" type="Node" parent="."]
script = ExtResource("3_riwmd")

[node name="PlayerSprintComponent" type="Node" parent="."]
script = ExtResource("7_4wyip")

[node name="FSM" type="Node2D" parent="."]
script = ExtResource("7_gymax")

[node name="EntityIdleState" type="Node2D" parent="FSM"]
script = ExtResource("5_mj20d")

[node name="EntityWalkState" type="Node2D" parent="FSM"]
script = ExtResource("6_r46d2")

[node name="PlayerSprintState" type="Node2D" parent="FSM"]
script = ExtResource("11_2ei5o")

[node name="PlayerBasicAttackState" type="Node2D" parent="FSM"]
script = ExtResource("14_wm882")

[node name="Hitbox" type="Area2D" parent="FSM/PlayerBasicAttackState"]
visible = false
collision_mask = 0
script = ExtResource("16_g3a36")
attack_start = 0.05
attack_end = 0.35
hitbox_path = "FSM/PlayerBasicAttackState/Hitbox"
damage = 10.0

[node name="side" type="CollisionShape2D" parent="FSM/PlayerBasicAttackState/Hitbox"]
position = Vector2(14, -7.5)
shape = SubResource("RectangleShape2D_1hbth")

[node name="front" type="CollisionShape2D" parent="FSM/PlayerBasicAttackState/Hitbox"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_yt6vr")

[node name="back" type="CollisionShape2D" parent="FSM/PlayerBasicAttackState/Hitbox"]
position = Vector2(-1, -18)
shape = SubResource("RectangleShape2D_uo1w0")

[node name="EntityHurtState" type="Node2D" parent="FSM"]
script = ExtResource("16_7jrph")

[node name="EntityDeathState" type="Node2D" parent="FSM"]
script = ExtResource("18_epcdh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_038jc")
}

[node name="HitFlashAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_107rn")
}
script = ExtResource("20_ui2af")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryGUI" parent="CanvasLayer" instance=ExtResource("21_770ko")]
visible = false
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -368.75
offset_bottom = 368.75
grow_vertical = 2
